--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
     implementation("org.bouncycastle:bcprov-jdk15on:1.70")
 
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+
+    /// https://mvnrepository.com/artifact/com.amazonaws/aws-android-sdk-iot
+    implementation 'com.amazonaws:aws-android-sdk-iot:2.73.0'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.73.0'
+    implementation 'com.amazonaws:aws-android-sdk-sts:2.23.0'
+    // https://mvnrepository.com/artifact/com.amazonaws.auth/aws-java-sdk
+    implementation 'com.amazonaws.auth:aws-java-sdk:1.11.434'
 }
